--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -99,6 +99,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "multimc"
         "obs"
         "openemu"
+        "openmw"
         "pokemon-showdown"
         "proton-mail-bridge"
         "protonvpn"
