--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -96,6 +96,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "gzdoom"
         "inkscape"
         "krita"
+        "librewolf"
         "multimc"
         "obs"
         "openemu"
