--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -214,20 +214,26 @@ Install and configure =vterm= as a terminal emulator in Emacs.
     ("C-c v" . vterm))
 #+end_src
 
-Install =company= for completions. It is configured to start with no delay immediately after the first key press. =vertico= is used as a front end for completions. =orderless= is used to allow searching in any portion of a string and =marginalia= gives descriptions of items in the list.
+Use =corfu= for completions. =orderless= is used to allow searching in any portion of a string and =marginalia= gives descriptions of items in the list.
 #+begin_src emacs-lisp
-  (use-package company
-    :init
-    (global-company-mode)
-    :config
-    (setq company-idle-delay 0.4
-          company-minimum-prefix-length 1
-          company-selection-wrap-around t))
-  (use-package vertico
+  ;;(use-package company
+  ;;  :init
+  ;;  (global-company-mode)
+  ;;  :config
+  ;;  (setq company-idle-delay 0.4
+  ;;        company-minimum-prefix-length 1
+  ;;        company-selection-wrap-around t))
+  ;;(use-package vertico
+  ;;  :custom
+  ;;  (vertico-cycle t)
+  ;;  :init
+  ;;  (vertico-mode 1))
+
+  (use-package corfu
     :custom
-    (vertico-cycle t)
+    (corfu-cycle t)
     :init
-    (vertico-mode 1))
+    (global-corfu-mode))
   (use-package orderless
     :custom
     (completion-styles '(orderless basic))
