--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -223,17 +223,17 @@ Use =corfu= for completions. =orderless= is used to allow searching in any porti
   ;;  (setq company-idle-delay 0.4
   ;;        company-minimum-prefix-length 1
   ;;        company-selection-wrap-around t))
-  ;;(use-package vertico
-  ;;  :custom
-  ;;  (vertico-cycle t)
-  ;;  :init
-  ;;  (vertico-mode 1))
 
   (use-package corfu
     :custom
     (corfu-cycle t)
+    (corfu-auto t)
     :init
     (global-corfu-mode))
+  (use-package vertico
+    :custom
+    (vertico-cycle t)
+    (vertico-mode 1))
   (use-package orderless
     :custom
     (completion-styles '(orderless basic))
