--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -214,16 +214,8 @@ Install and configure =vterm= as a terminal emulator in Emacs.
     ("C-c v" . vterm))
 #+end_src
 
-Use =corfu= for completions. =orderless= is used to allow searching in any portion of a string and =marginalia= gives descriptions of items in the list.
+Use =corfu= and =vertico= for completions. =orderless= is used to allow searching in any portion of a string and =marginalia= gives descriptions of items in the list.
 #+begin_src emacs-lisp
-  ;;(use-package company
-  ;;  :init
-  ;;  (global-company-mode)
-  ;;  :config
-  ;;  (setq company-idle-delay 0.4
-  ;;        company-minimum-prefix-length 1
-  ;;        company-selection-wrap-around t))
-
   (use-package corfu
     :custom
     (corfu-cycle t)
