--- a/macos.local/.flake/home/scripts/manage-system.org
+++ b/macos.local/.flake/home/scripts/manage-system.org
@@ -7,6 +7,7 @@
   {
       echo "Usage: $0 [command] where command is one of"
       echo "help    - show this message and exit"
+      echo "backup  - push the configuration to the remote"
       echo "update  - update the system"
       echo "install - install the system configurations"
   }
@@ -19,6 +20,11 @@
   case "$1" in
       help)
           usage
+          cd "$dir" || exit 1
+          exit 0
+          ;;
+      backup)
+          git push
           cd "$dir" || exit 1
           exit 0
           ;;
