--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -460,4 +460,5 @@ Set up =eglot= to run on languages that have been configured.
                           (eglot-ensure)
                           (tree-sitter-mode 1)
                           (tree-sitter-hl-mode 1))))
+  (eglot-inlay-hints-mode 0)
 #+end_src
