--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -62,6 +62,11 @@ Use =diredfl= for a colourful =dired= and =ns-auto-titlebar= for a macOS native 
     (ns-auto-titlebar-mode))
 #+end_src
 
+Colourful delimiters with =rainbow-delimiters=.
+#+begin_src emacs-lisp
+  (use-package rainbow-delimiters)
+#+end_src
+
 Tell Emacs to use line numbers by default.
 #+begin_src emacs-lisp
   (global-display-line-numbers-mode 1)
@@ -458,6 +463,7 @@ Set up =eglot= to run on languages that have been configured.
                        zig-mode-hook))
     (add-hook lang-hook (lambda ()
                           (eglot-ensure)
+                          (rainbow-delimiters-mode 1)
                           (tree-sitter-mode 1)
                           (tree-sitter-hl-mode 1))))
 #+end_src
