--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -164,6 +164,11 @@ Configure superior Emacs window management with =windmove=.
   (keymap-global-set "C-c C-w l" 'windmove-swap-states-right)
 #+end_src
 
+Don't show tooltips on hover; they are annoying with my window manager.
+#+begin_src emacs-lisp
+  (tooltip-mode -1)
+#+end_src
+
 * Tools
 Install =esup= as a profiling tool.
 #+begin_src emacs-lisp
