--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -332,6 +332,8 @@ Set up =flycheck= and =flyspell= for syntax and spell checking respectively.
   (use-package flycheck
     :config
     (add-hook 'after-init-hook #'global-flycheck-mode))
+  (use-package flyspell
+    :defer t)
   (use-package flyspell-correct
     :hook
     (text-mode . flyspell-mode)
