--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -332,7 +332,8 @@ Set up =flycheck= and =flyspell= for syntax and spell checking respectively.
   (use-package flycheck
     :config
     (add-hook 'after-init-hook #'global-flycheck-mode))
-  (use-package flyspell)
+  (use-package flyspell
+    :elpaca nil)
   (use-package flyspell-correct
     :after flyspell
     :hook
