--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -386,6 +386,11 @@ Smooth scrolling with =ultra-scroll=.
    (ultra-scroll-mode 1))
 #+end_src
 
+Access email with =notmuch=.
+#+begin_src emacs-lisp
+  (use-package notmuch)
+#+end_src
+
 * Languages
 
 Configure =org-mode=. I use =~/org= as my =org= directory and hide emphasis markers because it's much easier to read that way. I enable =org-crypt= to allow reading and writing encrypted =org= files. I also replace bullets in bulleted lists with nicer looking icons. I configure faces to default to variable-width font, but switching to monospace where it is necessary. Finally, I use =visual-fill-column= to make =org= files display with a relatively narrow window centred in the frame.
