--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -395,9 +395,17 @@ Configure =org-mode=. I use =~/org= as my =org= directory and hide emphasis mark
     (org-mode . (lambda ()
                   (variable-pitch-mode)
                   (display-line-numbers-mode -1)))
+    :bind
+    (
+     ("C-c l" . org-store-link)
+     ("C-c a" . org-agenda)
+     ("C-c c" . org-capture))
+
     :config
     (org-crypt-use-before-save-magic)
     (setq org-directory "~/org"
+          org-agenda-files "~/org"
+          org-log-done 'time
           org-hide-emphasis-markers t
           org-format-latex-options (plist-put org-format-latex-options :scale 2.0)
           org-return-follows-link t
@@ -421,6 +429,27 @@ Configure =org-mode=. I use =~/org= as my =org= directory and hide emphasis mark
     (org-level-4 ((t (:inherit outline-4 :weight bold :height 1.1))))
     (org-level-5 ((t (:inherit outline-5 :height 1.1))))
     (org-level-6 ((t (:inherit outline-6)))))
+#+end_src
+
+Highlight comment tags like =TODO= and whatnot.
+#+begin_src emacs-lisp
+  (use-package comment-tags
+    :init
+    (setq comment-tags-keyword-faces
+          `(("TODO" . ,(list :weight 'bold :foreground "#28ABE3"))
+            ("FIXME" . ,(list :weight 'bold :foreground "#DB3340"))
+            ("BUG" . ,(list :weight 'bold :foreground "#DB3340"))
+            ("HACK" . ,(list :weight 'bold :foreground "#E8B71A"))
+            ("KLUDGE" . ,(list :weight 'bold :foreground "#E8B71A"))
+            ("XXX" . ,(list :weight 'bold :foreground "#F7EAC8"))
+            ("INFO" . ,(list :weight 'bold :foreground "#F7EAC8"))
+            ("DONE" . ,(list :weight 'bold :foreground "#1FDA9A"))))
+    (setq comment-tags-comment-start-only t
+          comment-tags-require-colon t
+          comment-tags-case-sensitive t
+          comment-tags-show-faces t
+          comment-tags-lighter t)
+    (comment-tags-mode))
 #+end_src
 
 Install =cmake-mode=.
