--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -386,7 +386,7 @@ Smooth scrolling with =ultra-scroll=.
    (ultra-scroll-mode 1))
 #+end_src
 
-* Languages
+* COMMENT Languages
 
 Configure =org-mode=. I use =~/org= as my =org= directory and hide emphasis markers because it's much easier to read that way. I enable =org-crypt= to allow reading and writing encrypted =org= files. I also replace bullets in bulleted lists with nicer looking icons. I configure faces to default to variable-width font, but switching to monospace where it is necessary. Finally, I use =visual-fill-column= to make =org= files display with a relatively narrow window centred in the frame.
 #+begin_src emacs-lisp
@@ -403,8 +403,11 @@ Configure =org-mode=. I use =~/org= as my =org= directory and hide emphasis mark
 
     :config
     (org-crypt-use-before-save-magic)
+
     (setq org-directory "~/org"
           org-agenda-files (list org-directory)
+          org-agenda-file-regexp "\\`[^.].*\\.org\\\(\\.gpg\\\)?\\'"
+          org-todo-keywords '((sequence "TODO(t)" "PLANNING(p)" "IN-PROGRESS(i@/!)" "VERIFYING(v!)" "BLOCKED(b@)"  "|" "DONE(d!)" "WONT-DO(w@/!)"))
           org-log-done 'time
           org-hide-emphasis-markers t
           org-format-latex-options (plist-put org-format-latex-options :scale 2.0)
