--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -308,6 +308,18 @@ Install and configure =vterm= as a terminal emulator in Emacs.
     ("C-c v" . vterm))
 #+end_src
 
+Install and configure =eat= as a terminal emulator in Emacs.
+#+begin_src emacs-lisp
+  (use-package eat
+    :init
+    (eat-compile-terminfo)
+    (setopt eat-kill-buffer-on-exit t)
+    :hook
+    (eat-mode . (lambda () (display-line-numbers-mode -1)))
+    :bind
+    ("C-c v" . eat))
+#+end_src
+
 Use =corfu= and =vertico= for completions. =orderless= is used to allow searching in any portion of a string and =marginalia= gives descriptions of items in the list.
 #+begin_src emacs-lisp
   (use-package corfu
