--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -175,6 +175,16 @@ Don't show tooltips on hover; they are annoying with my window manager.
   (tooltip-mode -1)
 #+end_src
 
+Automatically increase the size of the focused window.
+#+begin_src emacs-lisp
+  (use-package zoom
+   :init
+   (zoom-mode)
+   :config
+   (setq zoom-size '(0.618 . 0.618)))
+#+end_src
+
+
 * Tools
 Install =esup= as a profiling tool.
 #+begin_src emacs-lisp
